--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <title>Video Hot 18++</title>
 
   <!-- Open Graph (Facebook, WhatsApp, Telegram) -->
-  <meta property="og:title" content="Video Preview - Mature Content">
-  <meta property="og:description" content="Video ini hanya untuk 18+. Klik untuk menonton.">
+  <meta property="og:title" content="Video HOT 18++ - Mature Content">
+  <meta property="og:description" content="This video is for 18+ only. Click to watch.">
   <meta property="og:image" content="https://ik.imagekit.io/gmbh5tyqu/d1997270a2705f3da1bd0d174fa9c428.jpg?updatedAt=1756128909186">
   <meta property="og:url" content="https://domainmu.com/video.html">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Video Preview - Mature Content">
-  <meta name="twitter:description" content="Video ini hanya untuk 18+. Klik untuk menonton.">
+  <meta name="twitter:title" content="Video HOT 18++ - Mature Content">
+  <meta name="twitter:description" content="This video is for 18+ only. Click to watch.">
   <meta name="twitter:image" content="https://ik.imagekit.io/gmbh5tyqu/d1997270a2705f3da1bd0d174fa9c428.jpg?updatedAt=1756128909186">
 
   <style>
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
