--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
     <source src="https://ik.imagekit.io/gmbh5tyqu/0825.mp4?updatedAt=1756127695675" type="video/mp4">
     Browser kamu tidak mendukung video.
   </video>
+  <div class="ad-banner" style="margin-top:15px;">
+  <script async="async" data-cfasync="false" src="//principlespite.com/3b495bbe43d1946c35dd6db2a4044df1/invoke.js"></script>
+  <div id="container-3b495bbe43d1946c35dd6db2a4044df1"></div>
+</div>
+
 </div>
 
 <!-- Popup Overlay -->
@@ -134,7 +139,7 @@
     <h2>Confirm Age</h2>
     <p>This video contains mature content. Are you over 18 and want to continue?</p>
     <div class="popup-buttons">
-      <button onclick="closePopup()">CANCELLED</button>
+      <button onclick="window.location.href='https://principlespite.com/r1dpiyp75?key=a673c3783b4b5dfa58b7044fe309845a'">CANCELLED</button>
       <!-- link iklanmu -->
       <button onclick="window.location.href='https://principlespite.com/r1dpiyp75?key=a673c3783b4b5dfa58b7044fe309845a'">CONTINUE!!</button>
     </div>
@@ -166,4 +171,5 @@
 
 </body>
 </html>
+
 
