--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <h2>Confirm Age</h2>
     <p>This video contains mature content. Are you over 18 and want to continue?</p>
     <div class="popup-buttons">
-      <button onclick="window.location.href='https://principlespite.com/r1dpiyp75?key=a673c3783b4b5dfa58b7044fe309845a'">CANCELLED</button>
+      <button onclick="closePopup()">CANCELLED</button>
       <!-- link iklanmu -->
       <button onclick="window.location.href='https://principlespite.com/r1dpiyp75?key=a673c3783b4b5dfa58b7044fe309845a'">CONTINUE!!</button>
     </div>
@@ -164,12 +164,13 @@
           popup.style.display = "flex";
           popupShown = true;
         }
-      }, 5000); // 5 detik
+      }, 3000); // 3 detik
     });
   });
 </script>
 
 </body>
 </html>
+
 
 
