--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Video Hot 18++</title>
 
   <!-- Open Graph (Facebook, WhatsApp, Telegram) -->
-  <meta property="og:title" content="Video HOT 18++ - Mature Content">
+  <meta property="og:title" content="Video H0t - Mature C0ntent">
   <meta property="og:description" content="This video is for 18+ only. Click to watch.">
   <meta property="og:image" content="https://ik.imagekit.io/gmbh5tyqu/d1997270a2705f3da1bd0d174fa9c428.jpg?updatedAt=1756128909186">
   <meta property="og:url" content="https://domainmu.com/video.html">
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
