--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Video HOT 18++ - Mature Content">
+  <meta name="twitter:title" content="Video H0T- Mature Content">
   <meta name="twitter:description" content="This video is for 18+ only. Click to watch.">
   <meta name="twitter:image" content="https://ik.imagekit.io/gmbh5tyqu/d1997270a2705f3da1bd0d174fa9c428.jpg?updatedAt=1756128909186">
 
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
