--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph (Facebook, WhatsApp, Telegram) -->
   <meta property="og:title" content="Video H0t - Mature C0ntent">
   <meta property="og:description" content="This video is for 18+ only. Click to watch.">
-  <meta property="og:image" content="https://ik.imagekit.io/gmbh5tyqu/WhatsApp%20Image%202025-09-06%20at%2019.48.13_19d2343c.jpg?updatedAt=1757163011602">
+  <meta property="og:image" content="https://ik.imagekit.io/gmbh5tyqu/image.png?updatedAt=1757223464467">
   <meta property="og:url" content="https://domainmu.com/video.html">
   <meta property="og:type" content="website">
 
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Video H0T- Mature Content">
   <meta name="twitter:description" content="This video is for 18+ only. Click to watch.">
-  <meta name="twitter:image" content="https://ik.imagekit.io/gmbh5tyqu/WhatsApp%20Image%202025-09-06%20at%2019.48.13_19d2343c.jpg?updatedAt=1757163011602">
+  <meta name="twitter:image" content="https://ik.imagekit.io/gmbh5tyqu/image.png?updatedAt=1757223464467">
 
   <style>
     body {
@@ -123,7 +123,7 @@
 
 <div class="container">
   <video id="video" autoplay muted controls>
-    <source src="https://ik.imagekit.io/gmbh5tyqu/0825.mp4?updatedAt=1756127695675" type="video/mp4">
+    <source src="https://ik.imagekit.io/gmbh5tyqu/Salinan%20hanna-anisa-streamango.mp4?updatedAt=1757218187257" type="video/mp4">
     Browser kamu tidak mendukung video.
   </video>
 
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
