--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="Video H0t - Mature C0ntent">
   <meta property="og:description" content="This video is for 18+ only. Click to watch.">
   <meta property="og:image" content="https://ik.imagekit.io/gmbh5tyqu/image.png?updatedAt=1757223464467">
-  <meta property="og:url" content="https://domainmu.com/video.html">
+  <meta property="og:url" content="https://live1222.github.io/Tik-tok-Hott/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card -->
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
