--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Open Graph (Facebook, WhatsApp, Telegram) -->
   <meta property="og:title" content="Video H0t - Mature C0ntent">
   <meta property="og:description" content="This video is for 18+ only. Click to watch.">
-  <meta property="og:image" content="https://ik.imagekit.io/81bnvfw1o/WhatsApp%20Image%202025-09-11%20at%2017.44.15_a14491d9.jpg?updatedAt=1757587591108">
+  <meta property="og:image" content="https://ik.imagekit.io/81bnvfw1o/WhatsApp%20Image%202025-09-11%20at%2017.54.52_efcfa88f.jpg?updatedAt=1757588111285">
   <meta property="og:url" content="https://live1222.github.io/Tik-tok-Hott/">
   <meta property="og:type" content="website">
 
@@ -16,7 +16,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Video H0T- Mature Content">
   <meta name="twitter:description" content="This video is for 18+ only. Click to watch.">
-  <meta name="twitter:image" content="https://ik.imagekit.io/81bnvfw1o/WhatsApp%20Image%202025-09-11%20at%2017.44.15_a14491d9.jpg?updatedAt=1757587591108">
+  <meta name="twitter:image" content="https://ik.imagekit.io/81bnvfw1o/WhatsApp%20Image%202025-09-11%20at%2017.54.52_efcfa88f.jpg?updatedAt=1757588111285">
 
   <style>
     body {
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
